# fastapi-backend

./: .lefthook.yml  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
